@@ -1,4 +1,14 @@
 #######################################
+2012-09-23 (Version 0.5.2)
+#######################################
+*The mvtol.region() function was updated to include many different ways to approximate the tolerance factor for
+ multivariate normal data.  These were mainly included for comparative purposes.  The default method ("KM") is the 
+ Krishnamoorthy-Mondal method, which was the method used in all previous versions of the 'tolerance' package.
+*Fixed a bug in the K.table() function.  When summarizing by "n", the wrong indexing was used, thus yielding
+ incorrect results.
+
+
+#######################################
 2012-08-28 (Version 0.5.1)
 #######################################
 *The functions related to Zipf-Mandelbrot distributions have been updated. The distribution functions (i.e.,
